* update projects maven repository
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@335 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/de.itemis.jee6.releng/pom.xml
+++ b/JEE6/de.itemis.jee6.releng/pom.xml
@@ -163,6 +163,13 @@
 		</pluginRepository>
 	</pluginRepositories>
 
+	<repositories>
+		<repository>
+			<id>projects</id>
+  		    <url>https://projects.itemis.de/nexus/content/groups/ejb3/</url>
+		</repository>
+	</repositories>
+
 	<profiles>
 		<profile>
 			<id>local-target</id>
