--- a/JEE6/de.itemis.jee6.releng/pom.xml
+++ b/JEE6/de.itemis.jee6.releng/pom.xml
@@ -163,7 +163,13 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
-	</build>
+											</build>
+<repositories>
+		<repository>
+					<id>projects</id>
+								<url>https://projects.itemis.de/nexus</url>
+										</repository>
+											</repositories>
 
 	<pluginRepositories>
 		<!-- Fornax Workflow Runner plugin -->
