* Clean Target entfernt.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@347 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/de.itemis.jee6.util/build.xml
+++ b/JEE6/de.itemis.jee6.util/build.xml
@@ -123,7 +123,7 @@
 	<!--              Setting up runtime targets              -->
 	<!-- ==================================================== -->
 
-	<target name="test" depends="clean,compile">
+	<target name="test" depends="compile">
 		<jacoco:coverage destfile="${jacoco-exec}">
 		    <junit printsummary="true" fork="true" forkmode="once" haltonerror="yes" haltonfailure="yes">
 				<classpath refid="coverage.classpath" />
