--- a/JEE6/de.itemis.jee6.releng/pom.xml
+++ b/JEE6/de.itemis.jee6.releng/pom.xml
@@ -62,6 +62,36 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<!-- See https://github.com/jbosstools/jbosstools-maven-plugins/wiki 
+					for documentation -->
+				<groupId>org.jboss.tools.tycho-plugins</groupId>
+				<artifactId>repository-utils</artifactId>
+				<version>0.16.0.CR1</version>
+				<executions>
+					<execution>
+						<id>generate-facade</id>
+						<phase>package</phase>
+						<goals>
+							<goal>generate-repository-facade</goal>
+						</goals>
+						<configuration>
+							<siteTemplateFolder>../de.itemis.jee6.updatesite/templates</siteTemplateFolder>
+							<!-- Symbols are used while expanding index.html template -->
+							<symbols>
+								<update.site.name>JEE6 Generator Repository</update.site.name>
+								<update.site.description>This URL can be used inside eclipse for
+									installing new software.</update.site.description>
+								<update.site.version>${project.version}</update.site.version>
+							</symbols>
+							<!-- <p2StatsUrl>http://server.org/url/where/to/push/stats</p2StatsUrl> -->
+							<associateSites>
+								<site>http://oaw.sourceforge.net/updates/</site>
+							</associateSites>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 		<pluginManagement>
 			<plugins>
@@ -96,25 +126,25 @@
 						<encoding>UTF-8</encoding>
 					</configuration>
 				</plugin>
-<!-- 				<plugin> -->
-<!-- 					<groupId>org.codehaus.mojo</groupId> -->
-<!-- 					<artifactId>build-helper-maven-plugin</artifactId> -->
-<!-- 					<version>1.3</version> -->
-<!-- 					<executions> -->
-<!-- 						<execution> -->
-<!-- 							<id>add-source</id> -->
-<!-- 							<phase>generate-sources</phase> -->
-<!-- 							<goals> -->
-<!-- 								<goal>add-source</goal> -->
-<!-- 							</goals> -->
-<!-- 							<configuration> -->
-<!-- 								<sources> -->
-<!-- 									<source>${project.build.directory}/xtend-gen</source> -->
-<!-- 								</sources> -->
-<!-- 							</configuration> -->
-<!-- 						</execution> -->
-<!-- 					</executions> -->
-<!-- 				</plugin> -->
+				<!-- <plugin> -->
+				<!-- <groupId>org.codehaus.mojo</groupId> -->
+				<!-- <artifactId>build-helper-maven-plugin</artifactId> -->
+				<!-- <version>1.3</version> -->
+				<!-- <executions> -->
+				<!-- <execution> -->
+				<!-- <id>add-source</id> -->
+				<!-- <phase>generate-sources</phase> -->
+				<!-- <goals> -->
+				<!-- <goal>add-source</goal> -->
+				<!-- </goals> -->
+				<!-- <configuration> -->
+				<!-- <sources> -->
+				<!-- <source>${project.build.directory}/xtend-gen</source> -->
+				<!-- </sources> -->
+				<!-- </configuration> -->
+				<!-- </execution> -->
+				<!-- </executions> -->
+				<!-- </plugin> -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-clean-plugin</artifactId>
@@ -182,7 +212,7 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
-  </build>
+	</build>
 
 	<pluginRepositories>
 		<!-- Fornax Workflow Runner plugin -->
@@ -196,13 +226,23 @@
 				<enabled>false</enabled>
 			</snapshots>
 		</pluginRepository>
+		<pluginRepository>
+			<id>jboss-public-repository-group</id>
+			<name>JBoss Public Repository Group</name>
+			<url>http://repository.jboss.org/nexus/content/groups/public/</url>
+		</pluginRepository>
+		<pluginRepository>
+			<id>jboss-snapshots-repository</id>
+			<name>JBoss Snapshots Repository</name>
+			<url>https://repository.jboss.org/nexus/content/repositories/snapshots/</url>
+		</pluginRepository>
 	</pluginRepositories>
 
 	<repositories>
 		<repository>
 			<id>projects</id>
 			<url>https://projects.itemis.de/nexus/content/groups/ejb3/</url>
-    </repository>
+		</repository>
 	</repositories>
 
 	<profiles>
