* Umstellung auf UTF-8.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@359 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/de.itemis.jee6.ui/pom.xml
+++ b/JEE6/de.itemis.jee6.ui/pom.xml
@@ -9,7 +9,7 @@
 		<version>1.1.7</version>
 		<relativePath>../de.itemis.jee6.releng/pom.xml</relativePath>
 	</parent>
-	<name>jee6 DSL UI</name>
+	<name>JEE6 DSL UI</name>
 	<artifactId>de.itemis.jee6.ui</artifactId>
 	<groupId>de.itemis.jee6</groupId>
 	<packaging>eclipse-plugin</packaging>
@@ -57,11 +57,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
-	<!-- <dependencies> -->
-	<!-- <dependency> -->
-	<!-- <groupId>de.itemis.jee6</groupId> -->
-	<!-- <artifactId>de.itemis.jee6.utils</artifactId> -->
-	<!-- </dependency> -->
-	<!-- </dependencies> -->
 </project>
