* Refactoring der Tests.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@366 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/FacesGenerated/build.xml
+++ b/JEE6/FacesGenerated/build.xml
@@ -177,7 +177,7 @@
 				excludeFilter="${findbugs.exclude}"
 				reportlevel="low"
 				failonerror="true">
-			<sourcePath path="${src-path}"/>
+			<sourcePath path="${src-path}:${src-gen-path}"/>
 			<class location="${bin-path}"/> 
 			<auxclasspath refid="compile.path"/>
 		</findbugs>
