--- a/JEE6/de.itemis.jee6.util/build.xml
+++ b/JEE6/de.itemis.jee6.util/build.xml
@@ -14,6 +14,9 @@
 	<property name="jboss.lib"     value="${jboss.home}/modules"/>
 	<property name="jboss.deploy"  value="${jboss.home}/standalone/deployments"/>
 
+	<property name="eclipse.home"         value="/opt/eclipse"/>
+	<property name="eclipse.home.plugins" value="${eclipse.home}/plugins"/>
+
 	<property name="coverage-path" value="./coverage"/>	
 	<property name="instr-path"    value="./instr"/>
 	<property name="jacoco-exec"   value="./jacoco.exec"/>
@@ -22,37 +25,47 @@
 	<!--              Setting up classpaths                   -->
 	<!-- ==================================================== -->
 
-	<path id="compile.path">
+	<path id="junit.lib">
+		<fileset dir="${eclipse.home.plugins}">
+			<include name="org.junit_4*/*.jar"/>
+			<include name="org.hamcrest*.jar"/>
+			<include name="**/ant-junit4.jar"/>
+		</fileset>
+	</path>
+
+	<path id="jboss.lib">
 		<fileset dir="${jboss.lib}">
 			<include name="**/*.jar"/>
 			<exclude name="**/*jsf*1.2*.jar"/>
 		</fileset>
-		<fileset dir="${lib-path}"/>
+	</path>
+
+	<path id="compile.path">
+		<path refid="jboss.lib"/>
+		<path refid="junit.lib"/>
 	</path>
 
 	<path id="runtime.path">
-		<path refid="compile.path"/>
+		<pathelement location="${bin-path}" />
+		<fileset dir="${lib-path}"/>
+		<path refid="jboss.lib"/>
 	</path>
 
-	<path id="coverage.lib">
-	</path>
-
-	<path id="coverage.classpath">
-		<pathelement path="${bin-path}" />
-		<pathelement location="${bin-path}" />  
+	<path id="junit.path">
 		<path refid="runtime.path"/>
+		<path refid="junit.lib"/>
 	</path>
 
 	<!-- ==================================================== -->
 	<!--            Setting up target definitions             -->
 	<!-- ==================================================== -->
 
-	<taskdef name="junit" classname="org.apache.tools.ant.taskdefs.optional.junit.JUnitTask" classpathref="runtime.path"/>
+	<taskdef name="junit" classname="org.apache.tools.ant.taskdefs.optional.junit.JUnitTask" classpathref="junit.lib"/>
 
 	<taskdef uri="antlib:org.jacoco.ant" resource="org/jacoco/ant/antlib.xml">
 		<classpath path="${lib-path}/jacocoant.jar"/>
 	</taskdef>
-	 
+
 	<!-- ==================================================== -->
 	<!--              Setting up build targets                -->
 	<!-- ==================================================== -->
@@ -125,8 +138,8 @@
 
 	<target name="test" depends="compile">
 		<jacoco:coverage destfile="${jacoco-exec}">
-		    <junit printsummary="true" fork="true" forkmode="once" haltonerror="yes" haltonfailure="yes">
-				<classpath refid="coverage.classpath" />
+			<junit printsummary="true" fork="true" forkmode="once" haltonerror="yes" haltonfailure="yes">
+				<classpath refid="junit.path" />
 				<formatter type="xml"/>
 				<test name="de.itemis.jee6.test.Base64Test"/>
 				<test name="de.itemis.jee6.test.DigestTest"/>
@@ -138,7 +151,7 @@
 				<test name="de.itemis.jee6.test.ValidatorTest"/>
 				<test name="de.itemis.jee6.test.LdapConnectionTest"/>
 				<test name="de.itemis.jee6.test.LdapTest"/>
-		    </junit>
+			</junit>
 		</jacoco:coverage>
 	</target>
 
@@ -147,7 +160,7 @@
 			<executiondata>
 				<file file="${jacoco-exec}"/>
 			</executiondata>
-   
+
 			<structure name="JEE6 Utilities">
 				<classfiles>
 					<fileset dir="${bin-path}">
@@ -161,7 +174,7 @@
 					</fileset>
 				</sourcefiles>
 			</structure>
-			                       
+
 			<html destdir="${coverage-path}"/>
 			<xml destfile="coverage.xml"/>
 		</jacoco:report>
