--- a/JEE6/de.itemis.jee6.product/pom.xml
+++ b/JEE6/de.itemis.jee6.product/pom.xml
@@ -14,7 +14,7 @@
 	<name>JEE6 DSL Product</name>
 
 	<properties>
-		<eclipse.server>http://mirror.netcologne.de/eclipse/eclipse/downloads/drops4/R-4.3.1-201309111000/</eclipse.server>
+		<eclipse.server>https://master.itemis.de/software/Eclipse/4.3/</eclipse.server>
 		<ftp.server>mirror.netcologne.de</ftp.server>
 		<ftp.path>eclipse/eclipse/downloads/drops4/S-4.3RC3-201305301430</ftp.path>
 		<ftp.director.path>eclipse/tools/buckminster/products</ftp.director.path>
