--- a/JEE6/de.itemis.jee6.product/pom.xml
+++ b/JEE6/de.itemis.jee6.product/pom.xml
@@ -71,7 +71,7 @@
 								<echo>Build Distribution</echo>
 								<builder builddirectory="${project.build.directory}/build" p2directorexecutable="${project.build.directory}/director/director"
 									targetdirectory="${basedir}/targets" staticreposdirectory="${basedir}/repos" distdirectory="${project.build.directory}/dist"
-									appname="JEE6" version="${project.version}">
+									appname="${appname}" version="${project.version}">
 
 									<updatesite url="https://builds.itemis.de/nexus/content/repositories/kepler/" />
 
@@ -113,10 +113,10 @@
 									</condition>
 								</fail>
 								<tasks>
-									<mv file="${eclipsesdk.linux.filename}-${appname}-${project.version}.tar.gz" tofile="eclipse-jee6-generator-kepler-SR1-linux-gtk-x86_64.tar.gz" />
-									<mv file="${eclipsesdk.windows.filename}-${appname}-${project.version}.tar.gz" tofile="eclipse-jee6-generator-kepler-SR1-win32-x86_64.zip" />
-									<mv file="${eclipsesdk.windows32.filename}-${appname}-${project.version}.tar.gz" tofile="eclipse-jee6-generator-kepler-SR1-win32.zip" />
-									<mv file="${eclipsesdk.osx.filename}-${appname}-${project.version}.tar.gz" tofile="eclipse-jee6-generator-kepler-SR1-macosx-cocoa-x86_64.tar.gz" />
+									<mv file="${project.build.directory}/dist/${eclipsesdk.linux.filename}-${appname}-${project.version}.tar.gz" tofile="${project.build.directory}/dist/eclipse-jee6-generator-kepler-SR1-linux-gtk-x86_64.tar.gz" />
+									<mv file="${project.build.directory}/dist/${eclipsesdk.windows.filename}-${appname}-${project.version}.tar.gz" tofile="${project.build.directory}/dist/eclipse-jee6-generator-kepler-SR1-win32-x86_64.zip" />
+									<mv file="${project.build.directory}/dist/${eclipsesdk.windows32.filename}-${appname}-${project.version}.tar.gz" tofile="${project.build.directory}/dist/eclipse-jee6-generator-kepler-SR1-win32.zip" />
+									<mv file="${project.build.directory}/dist/${eclipsesdk.osx.filename}-${appname}-${project.version}.tar.gz" tofile="${project.build.directory}/dist/eclipse-jee6-generator-kepler-SR1-macosx-cocoa-x86_64.tar.gz" />
 								</tasks>
 							</target>
 						</configuration>
