* Converter sind jetzt Serializable.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@377 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/MinimalWebApplicationCdi/pom.xml
+++ b/JEE6/MinimalWebApplicationCdi/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>MinimalWebApplicationCdi</artifactId>
 	<packaging>war</packaging>
 	<version>1.0.0</version>
-	<name>MinimalWebApplicationCdi</name>
+	<name>minimal</name>
 
 	<dependencies>
 		<dependency>
