--- a/JEE6/de.itemis.jee6/build.xml
+++ b/JEE6/de.itemis.jee6/build.xml
@@ -2,6 +2,8 @@
 	<property file="${user.home}/.jee6.properties" />
 	<property file="${basedir}/build.properties"/>
 	<property file="${basedir}/environment.properties"/>
+	<property name="ant.build.javac.source" value="1.6"/>
+	<property name="ant.build.javac.target" value="1.6"/>
 
 	<property name="bin-path"     value="./bin"/>
 	<property name="lib-path"     value="./lib"/>
@@ -94,8 +96,7 @@
 			</fileset>
 		</copy>
 		<javac srcdir="${src-path}:${src-gen-path}" destdir="${bin-path}" debug="true"
-				includeantruntime="false"
-				source="6">
+				includeantruntime="false">
 			<classpath refid="generate.classpath"/>
 		</javac>
 	</target>
