* Logo für Feature ergänzt.  * Texte für Feature korrigiert.  * Farbe in CSS an itemis angepasst.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@389 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/de.itemis.jee6/build.xml
+++ b/JEE6/de.itemis.jee6/build.xml
@@ -93,6 +93,9 @@
 			</fileset>
 			<fileset dir=".">
 				<include name="plugin.xml"/>
+				<include name="welcome.xml"/>
+				<include name="about.*"/>
+				<include name="itemis32.gif"/>
 			</fileset>
 		</copy>
 		<javac srcdir="${src-path}:${src-gen-path}" destdir="${bin-path}" debug="true"
