* Branding Icon wird korrekt im Build verwendet.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@393 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/de.itemis.jee6/build.properties
+++ b/JEE6/de.itemis.jee6/build.properties
@@ -3,5 +3,9 @@ source.. = src/,\
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               jee32.gif
+               about.html,\
+               about.ini,\
+               about.properties,\
+               jee32.gif,\
+               welcome.xml
 
