--- a/JEE6/de.itemis.jee6/build.xml
+++ b/JEE6/de.itemis.jee6/build.xml
@@ -95,7 +95,7 @@
 				<include name="plugin.xml"/>
 				<include name="welcome.xml"/>
 				<include name="about.*"/>
-				<include name="itemis32.gif"/>
+				<include name="jee32.gif"/>
 			</fileset>
 		</copy>
 		<javac srcdir="${src-path}:${src-gen-path}" destdir="${bin-path}" debug="true"
