* remove juno, add luna
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@394 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/de.itemis.jee6.releng/pom.xml
+++ b/JEE6/de.itemis.jee6.releng/pom.xml
@@ -247,15 +247,15 @@
 
 	<profiles>
 		<profile>
-			<id>juno</id>
+			<id>luna</id>
 			<activation>
-				<activeByDefault>true</activeByDefault>
+				<activeByDefault>false</activeByDefault>
 			</activation>
 			<repositories>
 				<repository>
 					<id>jee6-target</id>
 					<layout>p2</layout>
-					<url>${p2.target.repository}</url>
+					<url>http://download.eclipse.org/releases/luna</url>
 				</repository>
 				<repository>
 					<id>oaw-tools</id>
