* Add version names
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@395 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/de.itemis.jee6.releng/pom.xml
+++ b/JEE6/de.itemis.jee6.releng/pom.xml
@@ -248,6 +248,11 @@
 	<profiles>
 		<profile>
 			<id>luna</id>
+
+			<properties>
+				<target.eclipse.version>Luna</target.eclipse.version>
+			</properties>
+
 			<activation>
 				<activeByDefault>false</activeByDefault>
 			</activation>
@@ -309,6 +314,11 @@
 		</profile>
 		<profile>
 			<id>kepler</id>
+
+			<properties>
+				<target.eclipse.version>Kepler</target.eclipse.version>
+			</properties>
+
 			<activation>
 				<activeByDefault>true</activeByDefault>
 			</activation>
