--- a/JEE6/de.itemis.jee6.updatesite/pom.xml
+++ b/JEE6/de.itemis.jee6.updatesite/pom.xml
@@ -13,4 +13,41 @@
 	<packaging>eclipse-repository</packaging>
 
 	<name>JEE6 DSL Update Site</name>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.jboss.tools.tycho-plugins</groupId>
+				<artifactId>repository-utils</artifactId>
+				<version>0.19.0-SNAPSHOT</version>
+				<executions>
+					<execution>
+						<id>generate-facade</id>
+						<phase>package</phase>
+						<goals>
+							<goal>generate-repository-facade</goal>
+						</goals>
+						<configuration>
+							<siteTemplateFolder>templates</siteTemplateFolder>
+							<!-- Symbols are used while expanding index.html template -->
+							<symbols>
+								<update.site.name>JEE6 Generator Repository</update.site.name>
+								<update.site.description>This URL can be used inside eclipse for
+									installing new software.</update.site.description>
+								<update.site.version>${project.version}</update.site.version>
+								<target.eclipse.version>${target.eclipse.version}</target.eclipse.version>
+							</symbols>
+							<!-- <p2StatsUrl>http://server.org/url/where/to/push/stats</p2StatsUrl> -->
+							<associateSites>
+								<site>http://download.eclipse.org/releases/kepler</site>
+								<site>http://download.eclipse.org/rmf/updates/</site>
+								<site>http://oaw.sourceforge.net/updates/</site>
+								<site>http://download.itemis.com/updates/releases/2.0.0/</site>
+							</associateSites>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
