* use new signing plugin
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@402 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/de.itemis.jee6.releng/pom.xml
+++ b/JEE6/de.itemis.jee6.releng/pom.xml
@@ -48,10 +48,9 @@
 			<plugin>
 				<groupId>de.itemis.signing</groupId>
 				<artifactId>itemis-jarsigner</artifactId>
-				<version>0.0.4</version>
+				<version>0.0.5-SNAPSHOT</version>
 				<configuration>
 					<sshKey>/opt/hudson/home/id_yakindu_cc</sshKey>
-					<signerUrl>macbuilds.itemis.de</signerUrl>
 				</configuration>
 				<executions>
 					<execution>
