* configure signer from pom
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@403 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/de.itemis.jee6.releng/pom.xml
+++ b/JEE6/de.itemis.jee6.releng/pom.xml
@@ -51,6 +51,7 @@
 				<version>0.0.5-SNAPSHOT</version>
 				<configuration>
 					<sshKey>/opt/hudson/home/id_yakindu_cc</sshKey>
+					<signerUrl>signing@macbuilds.itemis.de</signerUrl>
 				</configuration>
 				<executions>
 					<execution>
