--- a/JEE6/jee.website.generator/.project
+++ b/JEE6/jee.website.generator/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>jee6.website.generator</name>
+	<name>de.itemis.jee6.website</name>
 	<comment></comment>
 	<projects>
 	</projects>
