* add help plugin
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@406 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/de.itemis.jee6.releng/pom.xml
+++ b/JEE6/de.itemis.jee6.releng/pom.xml
@@ -15,6 +15,7 @@
 		<module>../de.itemis.jee6.ui</module>
 		<module>../de.itemis.jee6.feature</module>
 		<module>../de.itemis.jee6.updatesite</module>
+		<module>../de.itemis.jee6.doc</module>
 	</modules>
 
 	<!-- this is the parent POM from which all modules inherit common settings -->
