* add plugin.xml to build.properties
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@413 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE6/de.itemis.jee6.doc/plugin.xml
+++ b/JEE6/de.itemis.jee6.doc/plugin.xml
@@ -2,6 +2,9 @@
 <?eclipse version="3.4"?>
 <plugin>
 	<extension	point="org.eclipse.help.toc">
-		<toc file="contents/toc.xml" primary="true"></toc>
+  <toc
+        file="contents/toc.xml"
+        primary="true">
+  </toc>
 	</extension>
 </plugin>
