--- a/JEE6/de.itemis.jee6.doc/pom.xml
+++ b/JEE6/de.itemis.jee6.doc/pom.xml
@@ -27,10 +27,13 @@
 							<goal>copy-resources</goal>
 						</goals>
 						<configuration>
-							<outputDirectory>${project.build.directory}/contents</outputDirectory>
+							<outputDirectory>${project.build.directory}/contents/</outputDirectory>
 							<resources>
 								<resource>
 									<directory>${basedir}/../de.itemis.jee6.xdoc/contents</directory>
+									<includes>
+                                		<include>**/*</include>
+                            		</includes>
 								</resource>
 							</resources>
 						</configuration>
