--- a/JEE6/de.itemis.jee6.doc/build.properties
+++ b/JEE6/de.itemis.jee6.doc/build.properties
@@ -1,2 +1,6 @@
 bin.includes = META-INF/,\
-				contents/
+               plugin.xml,\
+               contents/
+src.includes = META-INF/,\
+               contents/,\
+               plugin.xml
