--- a/JEE6/de.itemis.jee6.feature/pom.xml
+++ b/JEE6/de.itemis.jee6.feature/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>de.itemis.jee6</groupId>
     <artifactId>de.itemis.jee6.releng</artifactId>
-    <version>1.1.8</version>
+    <version>1.1.8-SNAPSHOT</version>
     <relativePath>../de.itemis.jee6.releng/pom.xml</relativePath>
   </parent>
 
