--- a/JEE6/de.itemis.jee6.product/pom.xml
+++ b/JEE6/de.itemis.jee6.product/pom.xml
@@ -6,7 +6,7 @@
 		<relativePath>../de.itemis.jee6.releng/pom.xml</relativePath>
 		<groupId>de.itemis.jee6</groupId>
 		<artifactId>de.itemis.jee6.releng</artifactId>
-		<version>1.1.8</version>
+		<version>1.1.8.qualifier</version>
 	</parent>
 
 	<artifactId>de.itemis.jee6.product</artifactId>
