--- a/JEE6/de.itemis.jee6.releng/pom.xml
+++ b/JEE6/de.itemis.jee6.releng/pom.xml
@@ -6,7 +6,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.itemis.jee6</groupId>
 	<artifactId>de.itemis.jee6.releng</artifactId>
-	<version>1.1.8</version>
+	<version>1.1.8-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<modules>
@@ -23,7 +23,6 @@
 		<tycho-version>0.19.0</tycho-version>
 		<tycho-extras-version>0.19.0</tycho-extras-version>
 		<antrun-version>1.6</antrun-version>
-		<platform-version-name>juno</platform-version-name>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<jee6.utils.version>1.1.7</jee6.utils.version>
 	</properties>
@@ -104,6 +103,8 @@
 					<artifactId>tycho-packaging-plugin</artifactId>
 					<version>${tycho-version}</version>
 					<configuration>
+						<timestampProvider>custom</timestampProvider>
+						<format>yyyyMMddHHmm</format>
 						<archive>
 							<addMavenDescriptor>false</addMavenDescriptor>
 						</archive>
