--- a/JEE6/de.itemis.jee6.updatesite/pom.xml
+++ b/JEE6/de.itemis.jee6.updatesite/pom.xml
@@ -6,7 +6,7 @@
 		<relativePath>../de.itemis.jee6.releng/pom.xml</relativePath>
 		<groupId>de.itemis.jee6</groupId>
 		<artifactId>de.itemis.jee6.releng</artifactId>
-		<version>1.1.8</version>
+		<version>1.1.8-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>de.itemis.jee6.updatesite</artifactId>
@@ -21,7 +21,7 @@
 				<artifactId>tycho-p2-repository-plugin</artifactId>
 				<version>${tycho-version}</version>
 				<configuration>
-					<includeAllDependencies>true</includeAllDependencies>
+					<includeAllDependencies>false</includeAllDependencies>
 				</configuration>
 			</plugin>
 			<plugin>
