--- a/JEE7/de.itemis.jee6.util/build.xml
+++ b/JEE7/de.itemis.jee6.util/build.xml
@@ -1,10 +1,10 @@
-<project name="JEE6 Utilities" default="package"  xmlns:jacoco="antlib:org.jacoco.ant">
-	<property file="${user.home}/.jee6.properties" />
+<project name="JEE7 Utilities" default="package"  xmlns:jacoco="antlib:org.jacoco.ant">
+	<property file="${user.home}/.jee7.properties" />
 	<property file="${basedir}/build.properties"/>
-	<property name="ant.build.javac.source" value="1.6"/>
-	<property name="ant.build.javac.target" value="1.6"/>
+	<property name="ant.build.javac.source" value="1.7"/>
+	<property name="ant.build.javac.target" value="1.7"/>
 	
-	<property name="jar"           value="jee6-utils.jar"/>
+	<property name="jar"           value="jee7-utils.jar"/>
 	<property name="bin-path"      value="./bin"/>
 	<property name="taget-path"    value="./target"/>
 	<property name="src-path"      value="./src/main/java"/>
@@ -12,7 +12,7 @@
 	<property name="lib-path"      value="./lib"/>
 	<property name="doc-path"      value="../api"/>
 
-	<property name="jboss.home"    value="/opt/jboss-as-7.1.1.Final"/>
+	<property name="jboss.home"    value="/opt/wildfly-8.0.0.Final"/>
 	<property name="jboss.lib"     value="${jboss.home}/modules"/>
 	<property name="jboss.deploy"  value="${jboss.home}/standalone/deployments"/>
 
@@ -142,16 +142,16 @@
 			<junit printsummary="true" fork="true" forkmode="once" haltonerror="yes" haltonfailure="yes">
 				<classpath refid="junit.path" />
 				<formatter type="xml"/>
-				<test name="de.itemis.jee6.test.Base64Test"/>
-				<test name="de.itemis.jee6.test.DigestTest"/>
-				<test name="de.itemis.jee6.test.UtilTest"/>
-				<test name="de.itemis.jee6.test.CollatorTest"/>
-				<test name="de.itemis.jee6.test.ErrorInfoTest"/>
-				<test name="de.itemis.jee6.test.FilterTest"/>
-				<test name="de.itemis.jee6.test.DownloadTest"/>
-				<test name="de.itemis.jee6.test.ValidatorTest"/>
-				<test name="de.itemis.jee6.test.LdapConnectionTest"/>
-				<test name="de.itemis.jee6.test.LdapTest"/>
+				<test name="de.itemis.jee7.test.Base64Test"/>
+				<test name="de.itemis.jee7.test.DigestTest"/>
+				<test name="de.itemis.jee7.test.UtilTest"/>
+				<test name="de.itemis.jee7.test.CollatorTest"/>
+				<test name="de.itemis.jee7.test.ErrorInfoTest"/>
+				<test name="de.itemis.jee7.test.FilterTest"/>
+				<test name="de.itemis.jee7.test.DownloadTest"/>
+				<test name="de.itemis.jee7.test.ValidatorTest"/>
+				<test name="de.itemis.jee7.test.LdapConnectionTest"/>
+				<test name="de.itemis.jee7.test.LdapTest"/>
 			</junit>
 		</jacoco:coverage>
 	</target>
