--- a/JEE7/FacesGenerated/build.xml
+++ b/JEE7/FacesGenerated/build.xml
@@ -1,5 +1,5 @@
-<project name="JEE6-WebApp Example (Full generated app)" default="generate">
-	<property file="${user.home}/.jee6.properties" />
+<project name="JEE7-WebApp Example (Full generated app)" default="generate">
+	<property file="${user.home}/.jee7.properties" />
 	<property file="${basedir}/build.properties"/>
 
 	<property name="war"                  value="example.war"/>
@@ -18,11 +18,11 @@
 	<property name="eclipse.home"         value="/opt/eclipse"/>
 	<property name="eclipse.home.plugins" value="${eclipse.home}/plugins"/>
 	
-	<property name="jboss.home"           value="/opt/jboss-as-7.1.1.Final"/>
+	<property name="jboss.home"           value="/opt/wildfly-8.0.0.Final"/>
 	<property name="jboss.lib"            value="${jboss.home}/modules"/>
 	<property name="jboss.deploy"         value="${jboss.home}/standalone/deployments"/>
 
-	<property name="glassfish.home"       value="/opt/glassfish3"/>
+	<property name="glassfish.home"       value="/opt/glassfish4"/>
 	<property name="glassfish.domain"     value="domain1"/>
 	<property name="glassfish.deploy"     value="${glassfish.home}/glassfish/domains/${glassfish.domain}/autodeploy/"/>
 
@@ -43,7 +43,7 @@
 			<include name="com.google.guava*.jar"/>
 			<include name="com.google.inject*.jar"/>
 			<include name="com.ibm.icu*.jar"/>
-			<include name="de.itemis.*.jar"/>
+			<include name="de.itemis.jee7*.jar"/>
 			<include name="de.morknet.oaw.*.jar"/>
 			<include name="org.antlr.runtime*.jar"/>
 			<include name="org.apache.commons.cli*.jar"/>
@@ -121,9 +121,9 @@
 	<target name="compile" depends="-version">
 		<mkdir dir="${bin-path}"/>
 		<mkdir dir="${lib-path}"/>
-		<copy file="../de.itemis.jee6.util/jee6-utils.jar" todir="${lib-path}"/>
+		<copy file="../de.itemis.jee7.util/jee7-utils.jar" todir="${lib-path}"/>
 		<copy todir="${img-path}">
-			<fileset dir="../de.itemis.jee6.ui/resources">
+			<fileset dir="../de.itemis.jee7.ui/resources">
 				<include name="*.*"/>
 			</fileset>
 		</copy>
