--- a/JEE7/FacesTest/build.xml
+++ b/JEE7/FacesTest/build.xml
@@ -1,5 +1,5 @@
-<project name="JEE6-WebApp Faces (Case study)" default="package">
-	<property file="${user.home}/.jee6.properties" />
+<project name="JEE7-WebApp Faces (Case study)" default="package">
+	<property file="${user.home}/.jee7.properties" />
 	<property file="${basedir}/build.properties"/>
 
 	<property name="bin-path"             value="./bin"/>
@@ -10,7 +10,7 @@
 	<property name="lib-path"             value="${res-path}/WEB-INF/lib"/>
 	<property name="img-path"             value="${res-path}/img"/>
 	<property name="tst-path"             value="./test"/>
-	<property name="ext-lib-path"         value="../de.itemis.jee6.util/lib"/>
+	<property name="ext-lib-path"         value="../de.itemis.jee7.util/lib"/>
 
 	<property name="war"                  value="facestest.war"/>
 	<property name="module.jar"           value="ldapcontext.jar"/>
@@ -27,12 +27,12 @@
 	<property name="instr-path"           value="./instr"/>	
 	<property name="emma.enabled"         value="true"/>
 
-	<property name="jboss.home"           value="/opt/jboss-as-7.1.1.Final"/>
+	<property name="jboss.home"           value="/opt/wildfly-8.0.0.Final"/>
 	<property name="jboss.lib"            value="${jboss.home}/modules"/>
-	<property name="jboss.module"         value="${jboss.lib}/de/itemis/jee6/ldap/main"/>
+	<property name="jboss.module"         value="${jboss.lib}/de/itemis/jee7/ldap/main"/>
 	<property name="jboss.deploy"         value="${jboss.home}/standalone/deployments"/>
 
-	<property name="glassfish.home"       value="/opt/glassfish3"/>
+	<property name="glassfish.home"       value="/opt/glassfish4"/>
 	<property name="glassfish.domain"     value="domain1"/>
 	<property name="glassfish.deploy"     value="${glassfish.home}/glassfish/domains/${glassfish.domain}/autodeploy/"/>
 
@@ -66,7 +66,7 @@
 			<include name="com.google.guava*.jar"/>
 			<include name="com.google.inject*.jar"/>
 			<include name="com.ibm.icu*.jar"/>
-			<include name="de.itemis.*.jar"/>
+			<include name="de.itemis.jee7*.jar"/>
 			<include name="de.morknet.oaw.*.jar"/>
 			<include name="org.antlr.runtime*.jar"/>
 			<include name="org.apache.commons.cli*.jar"/>
@@ -148,7 +148,7 @@
 
 	<target name="compile" depends="-version">
 		<mkdir dir="${bin-path}"/>
-		<copy file="../de.itemis.jee6.util/jee6-utils.jar" todir="${lib-path}"/>
+		<copy file="../de.itemis.jee7.util/jee7-utils.jar" todir="${lib-path}"/>
 		<javac srcdir="${src-path}:${src-gen-path}:${tst-path}" destdir="${bin-path}" debug="true" includeantruntime="false">
 			<classpath refid="compile.path"/>
 		</javac>
