--- a/JEE7/de.itemis.jee7.dbauth/build.xml
+++ b/JEE7/de.itemis.jee7.dbauth/build.xml
@@ -1,5 +1,5 @@
-<project name="JEE6 DB authorization" default="package">
-	<property file="${user.home}/.jee6.properties" />
+<project name="JEE7 DB authorization" default="package">
+	<property file="${user.home}/.jee7.properties" />
 	<property file="${basedir}/build.properties"/>
 
 	<property name="bin-path"             value="./bin"/>
@@ -16,11 +16,11 @@
 	<property name="eclipse.home"         value="/opt/eclipse"/>
 	<property name="eclipse.home.plugins" value="${eclipse.home}/plugins"/>
 	
-	<property name="jboss.home"           value="/opt/jboss-as-7.1.1.Final"/>
+	<property name="jboss.home"           value="/opt/wildfly-8.0.0.Final"/>
 	<property name="jboss.lib"            value="${jboss.home}/modules"/>
 	<property name="jboss.deploy"         value="${jboss.home}/standalone/deployments"/>
 
-	<property name="glassfish.home"       value="/opt/glassfish3"/>
+	<property name="glassfish.home"       value="/opt/glassfish4"/>
 	<property name="glassfish.deploy"     value="${glassfish.home}/glassfish/domains/domain1/autodeploy/"/>
 
 	<!-- ==================================================== -->
@@ -46,7 +46,7 @@
 			<include name="com.google.guava*.jar"/>
 			<include name="com.google.inject*.jar"/>
 			<include name="com.ibm.icu*.jar"/>
-			<include name="de.itemis.*.jar"/>
+			<include name="de.itemis.jee7*.jar"/>
 			<include name="de.morknet.oaw.*.jar"/>
 			<include name="org.antlr.runtime*.jar"/>
 			<include name="org.apache.commons.cli*.jar"/>
@@ -95,7 +95,7 @@
 
 	<target name="compile" depends="-version">
 		<mkdir dir="${bin-path}"/>
-		<copy file="../de.itemis.jee6.util/jee6-utils.jar" todir="${lib-path}"/>
+		<copy file="../de.itemis.jee7.util/jee7-utils.jar" todir="${lib-path}"/>
 		<javac srcdir="${src-path}:${src-gen-path}" destdir="${bin-path}" debug="true" includeantruntime="false">
 			<classpath refid="compile.path"/>
 		</javac>
