* Durchstich für JEE7!
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@466 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE7/FacesGenerated/.classpath
+++ b/JEE7/FacesGenerated/.classpath
@@ -6,8 +6,12 @@
 	<classpathentry kind="src" path="src/main/resources"/>
 	<classpathentry kind="src" path="model"/>
 	<classpathentry kind="src" path="src/main/java"/>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.jboss.ide.eclipse.as.core.server.runtime.runtimeTarget/JBoss 7.1 Runtime"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.jboss.ide.eclipse.as.core.server.runtime.runtimeTarget/WildFly 8.0 Runtime">
+		<attributes>
+			<attribute name="owner.project.facets" value="jst.web"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/de.itemis.jee6.util"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/de.itemis.jee7.util"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
