--- a/JEE7/MinimalWebApplicationCdi7/build.xml
+++ b/JEE7/MinimalWebApplicationCdi7/build.xml
@@ -8,11 +8,11 @@
 
 	<property name="war"              value="minimal.war"/>
 	
-	<property name="jboss.home"       value="/opt/jboss-as-7.1.1.Final"/>
+	<property name="jboss.home"       value="/opt/wildfly-8.0.0.Final"/>
 	<property name="jboss.lib"        value="${jboss.home}/modules"/>
 	<property name="jboss.deploy"     value="${jboss.home}/standalone/deployments"/>
 
-	<property name="glassfish.home"   value="/opt/glassfish3"/>
+	<property name="glassfish.home"   value="/opt/glassfish4"/>
 	<property name="glassfish.domain" value="domain1"/>
 	<property name="glassfish.deploy" value="${glassfish.home}/glassfish/domains/${glassfish.domain}/autodeploy/"/>
 
