* Referenzen korrigiert.  * Logging auf JDK umgestellt.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@471 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE7/de.itemis.jee7.ui/plugin.xml
+++ b/JEE7/de.itemis.jee7.ui/plugin.xml
@@ -184,25 +184,22 @@
 			</command>
 		</menuContribution>
 	</extension>
-   <!-- quickfix marker resolution generator -->
-   <extension
-         point="org.eclipse.ui.ide.markerResolution">
-      <markerResolutionGenerator
-            class="de.itemis.jee7.ui.DslExecutableExtensionFactory:org.eclipse.xtext.ui.editor.quickfix.MarkerResolutionGenerator">
-      </markerResolutionGenerator>
-   </extension>
+	<!-- quickfix marker resolution generator -->
+	<extension point="org.eclipse.ui.ide.markerResolution">
+		<markerResolutionGenerator class="de.itemis.jee7.ui.DslExecutableExtensionFactory:org.eclipse.xtext.ui.editor.quickfix.MarkerResolutionGenerator">
+		</markerResolutionGenerator>
+	</extension>
 
-   <extension point="org.eclipse.ui.newWizards">
-      <category id="de.itemis.jee7.ui.category" name="JEE-Generators">
-      </category>
-      <wizard
-            category="de.itemis.jee7.ui.category"
-            class="de.itemis.jee7.ui.DslExecutableExtensionFactory:de.itemis.jee7.ui.wizard.DslNewProjectWizard"
-            icon="icons/jee7_32.gif"
-            id="de.itemis.jee7.ui.wizard.DslNewProjectWizard"
-            name="JEE7 Generator Project"
-            project="true">
-      </wizard>
-   </extension>
-
+	<extension point="org.eclipse.ui.newWizards">
+		<category id="de.itemis.jee.ui.category" name="JEE-Generators">
+		</category>
+		<wizard
+			category="de.itemis.jee.ui.category"
+			class="de.itemis.jee7.ui.DslExecutableExtensionFactory:de.itemis.jee7.ui.wizard.DslNewProjectWizard"
+			icon="icons/jee7_32.gif"
+			id="de.itemis.jee7.ui.wizard.DslNewProjectWizard"
+			name="JEE7 Generator Project"
+			project="true">
+		</wizard>
+	</extension>
 </plugin>
