--- a/JEE7/de.itemis.jee7.product/pom.xml
+++ b/JEE7/de.itemis.jee7.product/pom.xml
@@ -32,7 +32,7 @@
 		<eclipsesdk.linux>${eclipse.server}${eclipsesdk.linux.filename}.tar.gz</eclipsesdk.linux>
 		<eclipsesdk.linux.filename>eclipse-SDK-${eclipse.version}-linux-gtk-x86_64</eclipsesdk.linux.filename>
 		<eclipse.version>4.3.2</eclipse.version>
-		<appname>jee6-generator</appname>
+		<appname>jee7-generator</appname>
 	</properties>
 
 	<build>
@@ -135,25 +135,25 @@
 <!-- 									<updatesite -->
 <!-- 										url="http://download.jboss.org/jbosstools/updates/stable/kepler" /> -->
 <!-- 									<installunit name="org.jboss.ide.eclipse.as.feature.feature.group" /> -->
-									<!-- JEE6 Generator -->
-									<updatesite url="http://jee6-generator.itemis.de/updates/kepler/" />
-									<installunit name="de.itemis.jee6.feature.feature.group" />
+									<!-- JEE7 Generator -->
+									<updatesite url="http://www.jee-generator.de/updates/kepler/" />
+									<installunit name="de.itemis.jee7.feature.feature.group" />
 								</builder>
 								<!-- Linux -->
 								<move file="${project.build.directory}/dist/${eclipsesdk.linux.filename}-${appname}-${project.version}.tar.gz"
-										tofile="${project.build.directory}/dist/eclipse-jee6-generator-kepler-linux-gtk-x86_64.tar.gz" />
+										tofile="${project.build.directory}/dist/eclipse-jee7-generator-kepler-linux-gtk-x86_64.tar.gz" />
 								<move file="${project.build.directory}/dist/${eclipsesdk.linux32.filename}-${appname}-${project.version}.tar.gz"
-										tofile="${project.build.directory}/dist/eclipse-jee6-generator-kepler-linux-gtk.tar.gz" />
+										tofile="${project.build.directory}/dist/eclipse-jee7-generator-kepler-linux-gtk.tar.gz" />
 								<!-- Windows -->
 								<move file="${project.build.directory}/dist/${eclipsesdk.windows.filename}-${appname}-${project.version}.zip"
-										tofile="${project.build.directory}/dist/eclipse-jee6-generator-kepler-win32-x86_64.zip" />
+										tofile="${project.build.directory}/dist/eclipse-jee7-generator-kepler-win32-x86_64.zip" />
 								<move file="${project.build.directory}/dist/${eclipsesdk.windows32.filename}-${appname}-${project.version}.zip"
-										tofile="${project.build.directory}/dist/eclipse-jee6-generator-kepler-win32.zip" />
+										tofile="${project.build.directory}/dist/eclipse-jee7-generator-kepler-win32.zip" />
 								<!-- OSX -->
 								<move file="${project.build.directory}/dist/${eclipsesdk.osx.filename}-${appname}-${project.version}.tar.gz"
-										tofile="${project.build.directory}/dist/eclipse-jee6-generator-kepler-macosx-cocoa-x86_64.tar.gz" />
+										tofile="${project.build.directory}/dist/eclipse-jee7-generator-kepler-macosx-cocoa-x86_64.tar.gz" />
 								<move file="${project.build.directory}/dist/${eclipsesdk.osx32.filename}-${appname}-${project.version}.tar.gz"
-										tofile="${project.build.directory}/dist/eclipse-jee6-generator-kepler-macosx-cocoa.tar.gz" />
+										tofile="${project.build.directory}/dist/eclipse-jee7-generator-kepler-macosx-cocoa.tar.gz" />
 							</target>
 						</configuration>
 					</execution>
