--- a/JEE6/de.itemis.jee6.feature/pom.xml
+++ b/JEE6/de.itemis.jee6.feature/pom.xml
@@ -2,15 +2,16 @@
 <project>
   <modelVersion>4.0.0</modelVersion>
 
-  <parent>
-    <groupId>de.itemis.jee6</groupId>
-    <artifactId>de.itemis.jee6.releng</artifactId>
-    <version>1.1.8-SNAPSHOT</version>
-    <relativePath>../de.itemis.jee6.releng/pom.xml</relativePath>
-  </parent>
+	<parent>
+		<groupId>de.itemis.jee</groupId>
+		<artifactId>de.itemis.jee.releng</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
+		<relativePath>../../Updatesite/de.itemis.jee.releng/pom.xml</relativePath>
+	</parent>
 
   <artifactId>de.itemis.jee6.feature</artifactId>
   <packaging>eclipse-feature</packaging>
 
   <name>JEE6 DSL Feature</name>
+  <version>1.1.8-SNAPSHOT</version>
 </project>
