--- a/JEE6/de.itemis.jee6.product/pom.xml
+++ b/JEE6/de.itemis.jee6.product/pom.xml
@@ -3,10 +3,10 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<relativePath>../de.itemis.jee6.releng/pom.xml</relativePath>
-		<groupId>de.itemis.jee6</groupId>
-		<artifactId>de.itemis.jee6.releng</artifactId>
-		<version>1.1.8.qualifier</version>
+		<groupId>de.itemis.jee</groupId>
+		<artifactId>de.itemis.jee.releng</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
+		<relativePath>../../Updatesite/de.itemis.jee.releng/pom.xml</relativePath>
 	</parent>
 
 	<artifactId>de.itemis.jee6.product</artifactId>
@@ -189,4 +189,5 @@
 			</snapshots>
 		</pluginRepository>
 	</pluginRepositories>
+	<version>1.1.8-SNAPSHOT</version>
 </project>
