--- a/JEE6/de.itemis.jee6.tests/pom.xml
+++ b/JEE6/de.itemis.jee6.tests/pom.xml
@@ -3,11 +3,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>de.itemis.jee6</groupId>
-		<artifactId>de.itemis.jee6.releng</artifactId>
-		<version>1.1.8-SNAPSHOT</version>
-		<relativePath>../de.itemis.jee6.releng/pom.xml</relativePath>
+		<groupId>de.itemis.jee</groupId>
+		<artifactId>de.itemis.jee.releng</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
+		<relativePath>../../Updatesite/de.itemis.jee.releng/pom.xml</relativePath>
 	</parent>
+
 	<name>JEE6 DSL Tests</name>
 	<artifactId>de.itemis.jee6.tests</artifactId>
 	<groupId>de.itemis.jee6</groupId>
@@ -26,4 +27,5 @@
 			</plugin>
 		</plugins>
 	</build>
+	<version>1.1.8-SNAPSHOT</version>
 </project>
