--- a/JEE7/de.itemis.jee7.feature/pom.xml
+++ b/JEE7/de.itemis.jee7.feature/pom.xml
@@ -2,12 +2,12 @@
 <project>
   <modelVersion>4.0.0</modelVersion>
 
-  <parent>
-    <groupId>de.itemis.jee7</groupId>
-    <artifactId>de.itemis.jee7.releng</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-    <relativePath>../de.itemis.jee7.releng/pom.xml</relativePath>
-  </parent>
+	<parent>
+		<groupId>de.itemis.jee</groupId>
+		<artifactId>de.itemis.jee.releng</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
+		<relativePath>../../Updatesite/de.itemis.jee.releng/pom.xml</relativePath>
+	</parent>
 
   <artifactId>de.itemis.jee7.feature</artifactId>
   <packaging>eclipse-feature</packaging>
