--- a/JEE7/de.itemis.jee7.product/pom.xml
+++ b/JEE7/de.itemis.jee7.product/pom.xml
@@ -3,10 +3,10 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<relativePath>../de.itemis.jee7.releng/pom.xml</relativePath>
-		<groupId>de.itemis.jee7</groupId>
-		<artifactId>de.itemis.jee7.releng</artifactId>
-		<version>1.0.0.qualifier</version>
+		<groupId>de.itemis.jee</groupId>
+		<artifactId>de.itemis.jee.releng</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
+		<relativePath>../../Updatesite/de.itemis.jee.releng/pom.xml</relativePath>
 	</parent>
 
 	<artifactId>de.itemis.jee7.product</artifactId>
