--- a/JEE7/de.itemis.jee7.ui/pom.xml
+++ b/JEE7/de.itemis.jee7.ui/pom.xml
@@ -4,11 +4,12 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>de.itemis.jee7</groupId>
-		<artifactId>de.itemis.jee7.releng</artifactId>
+		<groupId>de.itemis.jee</groupId>
+		<artifactId>de.itemis.jee.releng</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
-		<relativePath>../de.itemis.jee7.releng/pom.xml</relativePath>
+		<relativePath>../../Updatesite/de.itemis.jee.releng/pom.xml</relativePath>
 	</parent>
+
 	<name>JEE7 DSL UI</name>
 	<artifactId>de.itemis.jee7.ui</artifactId>
 	<groupId>de.itemis.jee7</groupId>
