--- a/Updatesite/de.itemis.jee.updatesite/pom.xml
+++ b/Updatesite/de.itemis.jee.updatesite/pom.xml
@@ -3,16 +3,16 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<relativePath>../de.itemis.jee6.releng/pom.xml</relativePath>
-		<groupId>de.itemis.jee6</groupId>
-		<artifactId>de.itemis.jee6.releng</artifactId>
-		<version>1.1.8-SNAPSHOT</version>
+		<relativePath>../de.itemis.jee.releng/pom.xml</relativePath>
+		<groupId>de.itemis.jee</groupId>
+		<artifactId>de.itemis.jee.releng</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>de.itemis.jee6.updatesite</artifactId>
+	<artifactId>de.itemis.jee.updatesite</artifactId>
 	<packaging>eclipse-repository</packaging>
 
-	<name>JEE6 DSL Update Site</name>
+	<name>JEE DSL Update Site</name>
 
 	<build>
 		<plugins>
