* JEE7-Utils hat jetzt auch eine beans.xml, damit    * Interceptoren funktionieren.    * Der Producer kann auch in die JEE7-Utils kann.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@489 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/JEE7/de.itemis.jee7.util/build.xml
+++ b/JEE7/de.itemis.jee7.util/build.xml
@@ -111,6 +111,7 @@
 			</zipfileset>
 			<zipfileset dir="${src-path}">
 				<include name="**/*.java"/>
+				<include name="**/*.xml"/>
 				<exclude name="**/test/**/*.java"/>
 			</zipfileset>
 		</jar>
